#l32libdir = $(prefix)/$(LIB32DIR)/linuxtrack
#
#if ! DARWIN
#  LINUXFLAGS = '-DLIB_PATH="$(pkglibdir)/"'
#if X64
#if LTR32ON64
#  l32lib_LTLIBRARIES = liblinuxtrack.la
#endif
#endif
#endif
#
#liblinuxtrack_la_SOURCES = ../ltlib.c ../linuxtrack.h ../utils.c ../utils.h \
#  ../ipc_utils.c ../ipc_utils.h
#liblinuxtrack_la_CFLAGS = $(LINUXFLAGS) -m32 -I..
#liblinuxtrack_la_LDFLAGS = -export-symbols "${srcdir}/../liblt.sym" -m32 $(LINUXFLAGS)
#
